changed spacing and fixed first month bug

--- a/spotify-thing/src/App.css
+++ b/spotify-thing/src/App.css
@@ -104,7 +104,7 @@
   width:85vw;
   grid-auto-flow:column;
   grid-auto-columns: 17%;
-  justify-content: flex-start;
+  justify-content: center;
   overflow-x:scroll;
   overscroll-behavior-inline: contain;
   position: relative;
